--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,14 @@ minikube_vm_driver: kvm2
 
 install_kubectl: 1 # 0 | 1  
 
-kubectl_repo_url: "https://storage.googleapis.com/kubernetes-release/release/v1.17.0/bin/linux/amd64/kubectl"
+kubectl_repo_url: "https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64"
 
-kubectl_install_dir: /usr/local/bin
+kubectl_repo_file:
+  - name: Kubernetes
+    description: Kubernetes Official Repository
+    baseurl: "{{ kubectl_repo_url }}"
+    enabled: 1
+    gpgcheck: 1
+    repo_gpgcheck: 1
+    gpgkey: "https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg"
+    state: present
